[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Structures/flamethrower.png" type="Texture" id=1]
[ext_resource path="res://src/FireTower.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 20 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FireZone/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireZone/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "fire"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("FireZone/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireZone/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_attack"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "invulnerable"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 208, 208 )

[node name="FireTower" type="StaticBody2D"]
collision_layer = 260
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/fire = SubResource( 19 )

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/invulnerable = SubResource( 15 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="FireZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireZone"]
position = Vector2( 0, -8 )
shape = SubResource( 20 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="FireZone"]
visible = false
margin_left = -208.0
margin_top = -216.0
margin_right = 208.0
margin_bottom = 200.0
color = Color( 0.976471, 0.0705882, 0.0705882, 0.321569 )

[node name="ActivateInterval" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="DamageInterval" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="body_entered" from="FireZone" to="." method="_on_FireZone_body_entered"]
[connection signal="timeout" from="ActivateInterval" to="." method="_on_ActivateInterval_timeout"]
[connection signal="timeout" from="DamageInterval" to="." method="_on_DamageInterval_timeout"]
